syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.inventory.model";
option java_outer_classname = "InventoryProtos";

package inventory;

import "google/protobuf/empty.proto";

message InsertCarRequest {
    string licensePlateNumber = 1;
    string manufacturer = 2;
    string model = 3;
}

message RemoveCarRequest {
    string licensePlateNumber = 1;
}

service InventoryService {
  rpc add(stream InsertCarRequest) returns (google.protobuf.Empty) {}
  rpc remove(RemoveCarRequest) returns (google.protobuf.Empty) {}
}